// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metric table for the change_failure_rate table row when the data is loaded renders the metric values 1`] = `
[
  "20.0%",
  "40.0%",
  "60.0%",
  "20.0%",
  "40.0%",
  "60.0%",
]
`;

exports[`Metric table for the change_failure_rate table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "connectNulls": true,
  "data": [
    [
      "Jul 1 - Jul 31",
      20,
    ],
    [
      "Jul 31 - Aug 31",
      40,
    ],
    [
      "Aug 31 - Oct 1",
      60,
    ],
    [
      "Oct 1 - Oct 31",
      20,
    ],
    [
      "Oct 31 - Dec 1",
      40,
    ],
    [
      "Dec 1 - Dec 31",
      60,
    ],
  ],
  "gradient": [
    "#5252B5",
    "#499767",
  ],
  "height": 30,
  "showLastYValue": false,
  "smooth": 0.2,
  "tooltipLabel": "%",
}
`;

exports[`Metric table for the code_suggestions_acceptance_rate table row when the data is loaded renders the metric values 1`] = `
[
  "20.0% 3/15",
  "42.9% 3/7",
  "66.7% 10/15",
  "50.0% 9/18",
  "17.6% 3/17",
  "33.3% 4/12",
]
`;

exports[`Metric table for the code_suggestions_acceptance_rate table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "connectNulls": true,
  "data": [
    [
      "Jul 1 - Jul 31",
      20,
    ],
    [
      "Jul 31 - Aug 31",
      42.9,
    ],
    [
      "Aug 31 - Oct 1",
      66.7,
    ],
    [
      "Oct 1 - Oct 31",
      50,
    ],
    [
      "Oct 31 - Dec 1",
      17.6,
    ],
    [
      "Dec 1 - Dec 31",
      33.3,
    ],
  ],
  "gradient": [
    "#499767",
    "#5252B5",
  ],
  "height": 30,
  "showLastYValue": false,
  "smooth": 0.2,
  "tooltipLabel": "%",
}
`;

exports[`Metric table for the code_suggestions_usage_rate table row renders the correct metric values and tooltips pre- and post-release 1`] = `
[
  "5.0% The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.",
  "10.0% The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.",
  "25.0% 1/4",
  "5.0% 1/20",
  "10.0% 1/10",
  "25.0% 1/4",
]
`;

exports[`Metric table for the code_suggestions_usage_rate table row when the data is loaded renders the metric values 1`] = `
[
  "5.0% The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.",
  "10.0% The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.",
  "25.0% The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.",
  "5.0% The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.",
  "10.0% The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.",
  "25.0% The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.",
]
`;

exports[`Metric table for the code_suggestions_usage_rate table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "connectNulls": true,
  "data": [
    [
      "Jul 1 - Jul 31",
      5,
    ],
    [
      "Jul 31 - Aug 31",
      10,
    ],
    [
      "Aug 31 - Oct 1",
      25,
    ],
    [
      "Oct 1 - Oct 31",
      5,
    ],
    [
      "Oct 31 - Dec 1",
      10,
    ],
    [
      "Dec 1 - Dec 31",
      25,
    ],
  ],
  "gradient": [
    "#499767",
    "#5252B5",
  ],
  "height": 30,
  "showLastYValue": false,
  "smooth": 0.2,
  "tooltipLabel": "%",
}
`;

exports[`Metric table for the contributor_count table row when the data is loaded renders the metric values 1`] = `
[
  "4",
  "4",
  "4",
  "4",
  "4",
  "4",
]
`;

exports[`Metric table for the contributor_count table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "connectNulls": true,
  "data": [
    [
      "Jul 1 - Jul 31",
      4,
    ],
    [
      "Jul 31 - Aug 31",
      4,
    ],
    [
      "Aug 31 - Oct 1",
      4,
    ],
    [
      "Oct 1 - Oct 31",
      4,
    ],
    [
      "Oct 31 - Dec 1",
      4,
    ],
    [
      "Dec 1 - Dec 31",
      4,
    ],
  ],
  "gradient": [
    "#499767",
    "#5252B5",
  ],
  "height": 30,
  "showLastYValue": false,
  "smooth": 0.2,
  "tooltipLabel": "",
}
`;

exports[`Metric table for the cycle_time table row when the data is loaded renders the metric values 1`] = `
[
  "1.0 d",
  "2.0 d",
  "4.0 d",
  "1.0 d",
  "2.0 d",
  "4.0 d",
]
`;

exports[`Metric table for the cycle_time table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "connectNulls": true,
  "data": [
    [
      "Jul 1 - Jul 31",
      1,
    ],
    [
      "Jul 31 - Aug 31",
      2,
    ],
    [
      "Aug 31 - Oct 1",
      4,
    ],
    [
      "Oct 1 - Oct 31",
      1,
    ],
    [
      "Oct 31 - Dec 1",
      2,
    ],
    [
      "Dec 1 - Dec 31",
      4,
    ],
  ],
  "gradient": [
    "#5252B5",
    "#499767",
  ],
  "height": 30,
  "showLastYValue": false,
  "smooth": 0.2,
  "tooltipLabel": "days",
}
`;

exports[`Metric table for the deployment_frequency table row when the data is loaded renders the metric values 1`] = `
[
  "10.0/d",
  "20.0/d",
  "40.0/d",
  "10.0/d",
  "20.0/d",
  "40.0/d",
]
`;

exports[`Metric table for the deployment_frequency table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "connectNulls": true,
  "data": [
    [
      "Jul 1 - Jul 31",
      10,
    ],
    [
      "Jul 31 - Aug 31",
      20,
    ],
    [
      "Aug 31 - Oct 1",
      40,
    ],
    [
      "Oct 1 - Oct 31",
      10,
    ],
    [
      "Oct 31 - Dec 1",
      20,
    ],
    [
      "Dec 1 - Dec 31",
      40,
    ],
  ],
  "gradient": [
    "#499767",
    "#5252B5",
  ],
  "height": 30,
  "showLastYValue": false,
  "smooth": 0.2,
  "tooltipLabel": "/day",
}
`;

exports[`Metric table for the duo_chat_usage_rate table row when the data is loaded renders the metric values 1`] = `
[
  "20.0% 3/15",
  "42.9% 3/7",
  "66.7% 10/15",
  "50.0% 9/18",
  "17.6% 3/17",
  "33.3% 4/12",
]
`;

exports[`Metric table for the duo_chat_usage_rate table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "connectNulls": true,
  "data": [
    [
      "Jul 1 - Jul 31",
      20,
    ],
    [
      "Jul 31 - Aug 31",
      42.9,
    ],
    [
      "Aug 31 - Oct 1",
      66.7,
    ],
    [
      "Oct 1 - Oct 31",
      50,
    ],
    [
      "Oct 31 - Dec 1",
      17.6,
    ],
    [
      "Dec 1 - Dec 31",
      33.3,
    ],
  ],
  "gradient": [
    "#499767",
    "#5252B5",
  ],
  "height": 30,
  "showLastYValue": false,
  "smooth": 0.2,
  "tooltipLabel": "%",
}
`;

exports[`Metric table for the duo_rca_usage_rate table row renders the correct metric values and tooltips pre- and post-release 1`] = `
[
  "33.3% Data available after upgrade to GitLab 18.0. Learn more.",
  "85.7% Data available after upgrade to GitLab 18.0. Learn more.",
  "73.3% 11/15",
  "66.7% 12/18",
  "41.2% 7/17",
  "50.0% 6/12",
]
`;

exports[`Metric table for the duo_rca_usage_rate table row when the data is loaded renders the metric values 1`] = `
[
  "33.3% Data available after upgrade to GitLab 18.0. Learn more.",
  "85.7% Data available after upgrade to GitLab 18.0. Learn more.",
  "73.3% Data available after upgrade to GitLab 18.0. Learn more.",
  "66.7% Data available after upgrade to GitLab 18.0. Learn more.",
  "41.2% Data available after upgrade to GitLab 18.0. Learn more.",
  "50.0% Data available after upgrade to GitLab 18.0. Learn more.",
]
`;

exports[`Metric table for the duo_rca_usage_rate table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "connectNulls": true,
  "data": [
    [
      "Jul 1 - Jul 31",
      33.3,
    ],
    [
      "Jul 31 - Aug 31",
      85.7,
    ],
    [
      "Aug 31 - Oct 1",
      73.3,
    ],
    [
      "Oct 1 - Oct 31",
      66.7,
    ],
    [
      "Oct 31 - Dec 1",
      41.2,
    ],
    [
      "Dec 1 - Dec 31",
      50,
    ],
  ],
  "gradient": [
    "#499767",
    "#5252B5",
  ],
  "height": 30,
  "showLastYValue": false,
  "smooth": 0.2,
  "tooltipLabel": "%",
}
`;

exports[`Metric table for the lead_time table row when the data is loaded renders the metric values 1`] = `
[
  "1.0 d",
  "2.0 d",
  "4.0 d",
  "1.0 d",
  "2.0 d",
  "4.0 d",
]
`;

exports[`Metric table for the lead_time table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "connectNulls": true,
  "data": [
    [
      "Jul 1 - Jul 31",
      1,
    ],
    [
      "Jul 31 - Aug 31",
      2,
    ],
    [
      "Aug 31 - Oct 1",
      4,
    ],
    [
      "Oct 1 - Oct 31",
      1,
    ],
    [
      "Oct 31 - Dec 1",
      2,
    ],
    [
      "Dec 1 - Dec 31",
      4,
    ],
  ],
  "gradient": [
    "#5252B5",
    "#499767",
  ],
  "height": 30,
  "showLastYValue": false,
  "smooth": 0.2,
  "tooltipLabel": "days",
}
`;

exports[`Metric table for the median_time_to_merge table row when the data is loaded renders the metric values 1`] = `
[
  "0.1 d",
  "0.2 d",
  "0.3 d",
  "0.3 d",
  "0.2 d",
  "0.1 d",
]
`;

exports[`Metric table for the median_time_to_merge table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "connectNulls": true,
  "data": [
    [
      "Jul 1 - Jul 31",
      0.1,
    ],
    [
      "Jul 31 - Aug 31",
      0.2,
    ],
    [
      "Aug 31 - Oct 1",
      0.3,
    ],
    [
      "Oct 1 - Oct 31",
      0.3,
    ],
    [
      "Oct 31 - Dec 1",
      0.2,
    ],
    [
      "Dec 1 - Dec 31",
      0.1,
    ],
  ],
  "gradient": [
    "#5252B5",
    "#499767",
  ],
  "height": 30,
  "showLastYValue": false,
  "smooth": 0.2,
  "tooltipLabel": "days",
}
`;

exports[`Metric table for the merge_request_throughput table row when the data is loaded renders the metric values 1`] = `
[
  "10",
  "10",
  "10",
  "10",
  "10",
  "10",
]
`;

exports[`Metric table for the merge_request_throughput table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "connectNulls": true,
  "data": [
    [
      "Jul 1 - Jul 31",
      10,
    ],
    [
      "Jul 31 - Aug 31",
      10,
    ],
    [
      "Aug 31 - Oct 1",
      10,
    ],
    [
      "Oct 1 - Oct 31",
      10,
    ],
    [
      "Oct 31 - Dec 1",
      10,
    ],
    [
      "Dec 1 - Dec 31",
      10,
    ],
  ],
  "gradient": [
    "#499767",
    "#5252B5",
  ],
  "height": 30,
  "showLastYValue": false,
  "smooth": 0.2,
  "tooltipLabel": "",
}
`;

exports[`Metric table for the vulnerability_critical table row when the data is loaded renders the metric values 1`] = `
[
  "40",
  "20",
  "10",
  "40",
  "20",
  "10",
]
`;

exports[`Metric table for the vulnerability_critical table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "connectNulls": true,
  "data": [
    [
      "Jul 1 - Jul 31",
      40,
    ],
    [
      "Jul 31 - Aug 31",
      20,
    ],
    [
      "Aug 31 - Oct 1",
      10,
    ],
    [
      "Oct 1 - Oct 31",
      40,
    ],
    [
      "Oct 31 - Dec 1",
      20,
    ],
    [
      "Dec 1 - Dec 31",
      10,
    ],
  ],
  "gradient": [
    "#5252B5",
    "#499767",
  ],
  "height": 30,
  "showLastYValue": false,
  "smooth": 0.2,
  "tooltipLabel": "",
}
`;
